--- a/Views/AppView.xaml
+++ b/Views/AppView.xaml
@@ -124,7 +124,7 @@
                     </HierarchicalDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
-            <Expander Grid.Row="2"
+            <Expander Grid.Row="2" Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppFilters}, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}"
                       IsExpanded="True">
                 <Expander.HeaderTemplate>
                     <DataTemplate>
@@ -150,7 +150,7 @@
                               IsChecked="{Binding AccessType,Converter={StaticResource FlagsEnumValueConverter},ConverterParameter={x:Static sharedLib:ApplicationModes.OneTimePurchase}}" />
                 </StackPanel>
             </Expander>
-            <Expander Grid.Row="3" Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppRating},Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}">
+            <Expander Grid.Row="3" Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppRatingFilter}, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}">
                 <Expander.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel>
@@ -182,7 +182,7 @@
                                  IsChecked="{Binding RatingFilter,Converter={StaticResource EnumMatchToBooleanConverter},ConverterParameter=Unrated}" />
                 </StackPanel>
             </Expander>
-            <Expander Grid.Row="4">
+            <Expander Grid.Row="4" Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppFilters}, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}">
                 <Expander.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel>
@@ -207,7 +207,7 @@
                               IsChecked="{Binding Type,Converter={StaticResource FlagsEnumValueConverter},ConverterParameter={x:Static sharedLib:ApplicationModes.Utility}}" />
                 </StackPanel>
             </Expander>
-            <Expander Grid.Row="5">
+            <Expander Grid.Row="5" Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppFilters}, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}">
                 <Expander.HeaderTemplate>
                     <DataTemplate>
                         <StackPanel>
