--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:lex="clr-namespace:Localization.Extensions;assembly=DataInterfaces"
+             xmlns:ss="clr-namespace:MaterialDesignSkin.Source"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:sif="clr-namespace:SkinInterfaces;assembly=DataInterfaces"
              mc:Ignorable="d"
@@ -170,7 +171,8 @@
                                 </Style>
                             </TextBlock.Style></TextBlock>
                     </Grid>
-                    <Grid Grid.Row="1">
+                    <Grid Grid.Row="1"
+                          Visibility="{Binding Source={x:Static ss:SettingsHelper.HideAppRating},Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=True}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition />
